Updated images in project

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -18,7 +18,7 @@
     <table border="3px" cellspacing="5" cellpadding="10" style="background-color: beige;">
         <tr>
             <td>
-                 <img src="./download.jpg" alt="">
+                 <img src="./assets/download (3).jpg" alt="">
         <br>
         <h2 style="color: blueviolet;">Website build by Lakshmi</h2>
             </td>
