uploaded new file

--- a/index.html/project 1.html
+++ b/index.html/project 1.html
@@ -16,7 +16,7 @@
     <li><a href="#skills">Skills</a></li>
     <li><a href="#pro">Projects</a></li>
     <li><a href="#con">Contact</a></li>
-    <li><a href="./lakshmi@resume.pdf" download="">Download Resume</a></li>
+    <li><a href="./assets/lakshmi@resume.pdf" download="">Download Resume</a></li>
    </ul></h3>
    
 <h2 id="About me"> About me</h2>
