fixed ui and updated matter and files

--- a/index.html/project 1.html
+++ b/index.html/project 1.html
@@ -5,25 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
 </head>
-<body>
+<style>
+    html{
+        scroll-behavior: smooth;
+    }
+    body{
+        width: 100%;
+        overflow-x: hidden;
+    }
+</style>
+
+<body> 
    <h1>LAKSHMI - FULL STACK DEVELOPER</h1>
 
 
    <h3>Welcome to my portfolio website! Use the navigation below to explore</h3>
 
-   <h3><ul>
+   <h3>
+    <nav>
+        <ul>
     <li><a href="#About me">About me</a></li>
     <li><a href="#skills">Skills</a></li>
     <li><a href="#pro">Projects</a></li>
+    <li><a href="#certificate">Certifications</a></li>
     <li><a href="#con">Contact</a></li>
     <li><a href="./assets/lakshmi@resume.pdf" download="">Download Resume</a></li>
-   </ul></h3>
+   </ul>
+    </nav>
+   </h3>
+
+
+   <hr>
    
+
 <h2 id="About me"> About me</h2>
 
-<p>Undergraduate student graduating in May 2026 with a background in Electrical and Electronics Engineering and hands-on training in <strong>Full Stack Java/Web Development</strong> at Tap Academy. Skilled in Java, HTML, CSS, and MYSQL, with a passion for building user-friendly web applications and a strong desire to learn and contribute to real-world software projects.</p>
+<h3>
+    <p>
+    Hi, I’m Lakshmi Sai Sree, a passionate Electrical and Electronics Engineering student with a strong interest in software development and web technologies.
+I enjoy building clean, responsive web pages and continuously improving my coding skills through hands-on projects. Alongside my core engineering background,
+I’m actively learning Java, full-stack development, and problem-solving fundamentals.I believe in consistent learning, practical implementation, and growing 
+through real-world experience. I’m currently seeking opportunities where I can apply my skills, learn from industry professionals, and contribute meaningfully to innovative projects.
+</p>
 
-<h5><a href="https://github.com/Laxmi-6214/index.html.git" target="-blank">Visit my Github profile</a></h5>
+</h3>
+<h4><a href="https://github.com/Laxmi-6214/index.html.git" target="-blank">Visit my Github profile</a></h4>
+
+
+<hr>
+
 
 <h2 id="skills"> Skills</h2>
 <h3><ul>
@@ -32,9 +62,39 @@
     <li>MySql</li>
 </ul></h3>
 
+
+<hr>
+
+
 <h2 id="pro">Projects</h2>
 
-<h3><ul><li>Friends Blog Web Page</li></ul></h3>
+<h3>
+    <ul>
+        <li>
+            <a target="_blank" href="https://laxmi-6214.github.io/index.html/">Multimedia Blog Web Page</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://laxmi-6214.github.io/Final_Project/">An Webpage of pure HTML</a>
+        </li>
+    </ul>
+</h3>
+
+
+<hr>
+
+
+<h2 id="certificate">Certifications</h2>
+<h3>
+    <ul>
+        <li>
+           <a target="_blank" href="./assets/eCertificate Oracle.pdf">Oracle certficate</a>
+        </li>
+    </ul>
+</h3>
+
+
+<hr>
+
 
 <h2 id="con">Contact</h2>
 
