updated the matter

--- a/index.html/project 4.html
+++ b/index.html/project 4.html
@@ -6,6 +6,12 @@
     <title>POURNAMI</title>
     <link rel="icon" href="&#8466;">
 </head>
+<style>
+    body{
+    width: 100%;
+    overflow-x: hidden;
+   }
+</style>
 <body>
     <h1>BLOCKBSTER EVERLASTING POURNAMI(FILM)</h1>
     <h2>article</h2>
