--- a/index.html/travel louvre.html
+++ b/index.html/travel louvre.html
@@ -6,6 +6,12 @@
     <title>Louvre Museum</title>
     <link rel="stylesheet" href="./color.css">
 </head>
+<style>
+    body{
+    width: 100%;
+    overflow-x: hidden;
+   }
+</style>
 <body class="louvre-page">
     <h1>
 🏛️ Louvre Museum
@@ -13,7 +19,8 @@
     <h2>
         <pre>
             <em>
-The Louvre Museum in Paris is the world’s most famous art museum, where centuries of history, iconic masterpieces, and stunning architecture come together in one unforgettable cultural experience.
+The Louvre Museum in Paris is the world’s most famous art museum, where centuries of history, iconic masterpieces,
+and stunning architecture come together in one unforgettable cultural experience.
             </em>
         </pre>
     </h2>
@@ -23,16 +30,17 @@ The Louvre Museum in Paris is the world’s most famous art museum, where centur
 
 <img src="./assets/pexels-pixabay-2363 meu 2.jpg" height="350" width="300" alt=""> <img src="./assets/istockphoto-499655986-612x612 meu 4.jpg" height="350" width="300" alt="">
 
-The Louvre Museum, located in the heart of Paris along the River Seine, is one of the most iconic cultural landmarks in the world.
-Originally built in the late 12th century as a defensive fortress, the structure was later transformed into a royal palace and 
-eventually became a public museum in 1793 after the French Revolution. Over the centuries, the Louvre has grown not only in size but
-also in importance, evolving into a symbol of France’s artistic, historical, and cultural heritage. Today, it houses thousands of artworks 
-that span from ancient civilizations to the 19th century, making it a living record of human creativity and history.
-What makes the Louvre truly unique is the extraordinary range and scale of its collections combined with its architecture. Inside the museum, 
-visitors can see world-famous masterpieces such as the Mona Lisa, the Venus de Milo, and the Winged Victory of Samothrace, alongside Egyptian 
-antiquities, Islamic art, Renaissance paintings, sculptures, and decorative arts. The museum itself is a blend of old and new, with the historic
-palace walls contrasting beautifully with the modern glass pyramid at its entrance. This pyramid has become a global symbol of Paris, representing 
-the harmony between tradition and innovation.       
+The Louvre Museum, located in the heart of Paris along the River Seine, is one of the most iconic cultural landmarks
+in the world.Originally built in the late 12th century as a defensive fortress, the structure was later transformed
+into a royal palace and eventually became a public museum in 1793 after the French Revolution. Over the centuries, 
+the Louvre has grown not only in size but also in importance, evolving into a symbol of France’s artistic, historical,
+and cultural heritage. Today, it houses thousands of artworks that span from ancient civilizations to the 19th century,
+making it a living record of human creativity and history.What makes the Louvre truly unique is the extraordinary range
+and scale of its collections combined with its architecture. Inside the museum, visitors can see world-famous masterpieces
+such as the Mona Lisa, the Venus de Milo, and the Winged Victory of Samothrace, alongside Egyptian antiquities, Islamic art,
+Renaissance paintings, sculptures, and decorative arts. The museum itself is a blend of old and new, with the historic
+palace walls contrasting beautifully with the modern glass pyramid at its entrance. This pyramid has become a global symbol 
+of Paris, representing the harmony between tradition and innovation.       
 
 <strong style="font-size: 20px;">🏛️ What Makes It Unique & Why People Visit Louvre Museum :</strong>
 
@@ -40,18 +48,23 @@ the harmony between tradition and innovation.
 
 <strong style="font-size: 15px;">1. Historic Art Masterpieces:</strong>
 
-The Louvre houses world-renowned masterpieces, including the Mona Lisa by Leonardo da Vinci, the Venus de Milo, and the Winged Victory of Samothrace.
-These works do not simply hang on walls or stand in halls — they breathe centuries of human thought and emotion.As the poet once whispered, 
+The Louvre houses world-renowned masterpieces, including the Mona Lisa by Leonardo da Vinci, the Venus de Milo, and 
+the Winged Victory of Samothrace.
+These works do not simply hang on walls or stand in halls — they breathe centuries of human thought and emotion.As 
+the poet once whispered, 
 
 <em>“Art is the lie that enables us to realize the truth.”</em>
 
-Here, every painting and sculpture speaks across time, reminding visitors that creativity has always been humanity’s quiet rebellion against forgetting.
-Visitors come not just to look, but to feel works that span thousands of years of human creativity, where silence itself seems to carry meaning.
+Here, every painting and sculpture speaks across time, reminding visitors that creativity has always been humanity’s 
+quiet rebellion against forgetting.
+Visitors come not just to look, but to feel works that span thousands of years of human creativity, where silence 
+itself seems to carry meaning.
 
 <strong style="font-size: 15px;">2. Architectural and Cultural Legacy:</strong>
 
-The Louvre is more than a museum — it is a living chapter of French history. From its medieval stone foundations to Renaissance halls and the bold modern 
-glass pyramid, the building itself tells a story of evolution and vision.Walking through its corridors feels like stepping through verses written in stone, where 
+The Louvre is more than a museum — it is a living chapter of French history. From its medieval stone foundations
+to Renaissance halls and the bold modern glass pyramid, the building itself tells a story of evolution and vision.
+Walking through its corridors feels like stepping through verses written in stone, where 
 
 <em>“the past leans gently toward the present.”</em>
 
@@ -59,20 +72,21 @@ Each arch, courtyard, and gallery reminds us that history is not frozen — it c
 
 <strong style="font-size: 15px;">3. A Must-See Cultural Icon:</strong>
 
-Much like the Eiffel Tower defines the Paris skyline, the Louvre defines the soul of the city. It stands as a symbol of artistic excellence, cultural heritage,
- and historical depth.As poets have long believed, 
+Much like the Eiffel Tower defines the Paris skyline, the Louvre defines the soul of the city. It stands as a symbol
+of artistic excellence, cultural heritage, and historical depth.As poets have long believed, 
 
 <em>“Some places are not meant to be seen, but to be remembered.”</em>
 
-That is why millions from around the world plan entire journeys just to walk its halls once — to stand still in front of greatness and feel time slow down.
+That is why millions from around the world plan entire journeys just to walk its halls once — to stand still in front
+of greatness and feel time slow down.
 The Louvre is not checked off a list; it is carried in the heart long after the visit ends.
 
 <strong style="font-size: 20px;">🏛️ Speciality Of Louvre Museum: </strong>
 
 <img src="./assets/france-paris-louvre-museum-gold museum.jpg" height="350" width="400" alt="">  <img src="./assets/louvre-museum 676.jpg" height="350" width="400" alt="">
 
-The speciality of the Louvre Museum is its unmatched collection of world-famous artworks—like the Mona Lisa—displayed inside a historic royal palace that
- blends ancient civilizations, classic art, and modern architecture under one roof.
+The speciality of the Louvre Museum is its unmatched collection of world-famous artworks—like the Mona Lisa—displayed 
+inside a historic royal palace that blends ancient civilizations, classic art, and modern architecture under one roof.
 
 </pre>
     </h3>
